src/deps/imgui/ext/implot/c/cimplot.h

typedef struct tm tm;
typedef struct ImPlotNextItemData ImPlotNextItemData;
typedef struct ImPlotSubplot ImPlotSubplot;
typedef struct ImPlotItemGroup ImPlotItemGroup;
typedef struct ImPlotAlignmentData ImPlotAlignmentData;
typedef struct ImPlotTickCollection ImPlotTickCollection;
typedef struct ImPlotAnnotationCollection ImPlotAnnotationCollection;
typedef struct ImPlotAnnotation ImPlotAnnotation;
typedef struct ImPlotPointError ImPlotPointError;
typedef struct ImPlotColormapData ImPlotColormapData;
typedef struct ImPlotTime ImPlotTime;
typedef struct ImPlotDateTimeFmt ImPlotDateTimeFmt;
typedef struct ImPlotInputMap ImPlotInputMap;
typedef struct ImBufferWriter ImBufferWriter;
typedef struct ImPlotNextPlotData ImPlotNextPlotData;
typedef struct ImPlotPlot ImPlotPlot;
typedef struct ImPlotLegendData ImPlotLegendData;
typedef struct ImPlotItem ImPlotItem;
typedef struct ImPlotAxisColor ImPlotAxisColor;
typedef struct ImPlotAxis ImPlotAxis;
typedef struct ImPlotTick ImPlotTick;
typedef struct ImPlotStyle ImPlotStyle;
typedef struct ImPlotLimits ImPlotLimits;
typedef struct ImPlotRange ImPlotRange;
typedef struct ImPlotPoint ImPlotPoint;
typedef int ImPlotFlags;
typedef int ImPlotAxisFlags;
typedef int ImPlotSubplotFlags;
typedef int ImPlotMarker;
typedef int ImPlotColormap;
typedef int ImPlotLocation;
typedef int ImPlotOrientation;
struct ImPlotTick;
struct ImPlotAxis;
struct ImPlotAxisColor;
struct ImPlotItem;
struct ImPlotLegendData;
struct ImPlotPlot;
struct ImPlotNextPlotData;
typedef int ImPlotScale;
typedef int ImPlotDateFmt;
typedef int ImPlotTimeFmt;
typedef struct ImVector_ImPlotAlignmentData {int Size;int Capacity;ImPlotAlignmentData* Data;} ImVector_ImPlotAlignmentData;
typedef struct ImPool_ImPlotAlignmentData {ImVector_ImPlotAlignmentData Buf;ImGuiStorage Map;ImPoolIdx FreeIdx;} ImPool_ImPlotAlignmentData;
typedef struct ImVector_ImPlotItem {int Size;int Capacity;ImPlotItem* Data;} ImVector_ImPlotItem;
typedef struct ImPool_ImPlotItem {ImVector_ImPlotItem Buf;ImGuiStorage Map;ImPoolIdx FreeIdx;} ImPool_ImPlotItem;
typedef struct ImVector_ImPlotPlot {int Size;int Capacity;ImPlotPlot* Data;} ImVector_ImPlotPlot;
typedef struct ImPool_ImPlotPlot {ImVector_ImPlotPlot Buf;ImGuiStorage Map;ImPoolIdx FreeIdx;} ImPool_ImPlotPlot;
typedef struct ImVector_ImPlotSubplot {int Size;int Capacity;ImPlotSubplot* Data;} ImVector_ImPlotSubplot;
typedef struct ImPool_ImPlotSubplot {ImVector_ImPlotSubplot Buf;ImGuiStorage Map;ImPoolIdx FreeIdx;} ImPool_ImPlotSubplot;
typedef struct ImVector_ImPlotAnnotation {int Size;int Capacity;ImPlotAnnotation* Data;} ImVector_ImPlotAnnotation;
typedef struct ImVector_ImPlotColormap {int Size;int Capacity;ImPlotColormap* Data;} ImVector_ImPlotColormap;
typedef struct ImVector_ImPlotRange {int Size;int Capacity;ImPlotRange* Data;} ImVector_ImPlotRange;
typedef struct ImVector_ImPlotTick {int Size;int Capacity;ImPlotTick* Data;} ImVector_ImPlotTick;
typedef struct ImVector_bool {int Size;int Capacity;bool* Data;} ImVector_bool;
typedef struct ImVector_double {int Size;int Capacity;double* Data;} ImVector_double;
typedef struct ImVector_int {int Size;int Capacity;int* Data;} ImVector_int;
typedef enum {
    ImPlotCol_Line,
    ImPlotCol_Fill,
    ImPlotCol_MarkerOutline,
    ImPlotCol_MarkerFill,
    ImPlotCol_ErrorBar,
    ImPlotCol_FrameBg,
    ImPlotCol_PlotBg,
    ImPlotCol_PlotBorder,
    ImPlotCol_LegendBg,
    ImPlotCol_LegendBorder,
    ImPlotCol_LegendText,
    ImPlotCol_TitleText,
    ImPlotCol_InlayText,
    ImPlotCol_XAxis,
    ImPlotCol_XAxisGrid,
    ImPlotCol_YAxis,
    ImPlotCol_YAxisGrid,
    ImPlotCol_YAxis2,
    ImPlotCol_YAxisGrid2,
    ImPlotCol_YAxis3,
    ImPlotCol_YAxisGrid3,
    ImPlotCol_Selection,
    ImPlotCol_Query,
    ImPlotCol_Crosshairs,
    ImPlotCol_COUNT
}ImPlotCol_;
struct ImPlotPoint
{
    double x, y;
};
struct ImPlotRange
{
    double Min, Max;
};
struct ImPlotLimits
{
    ImPlotRange X, Y;
};
struct ImPlotStyle
{
    float LineWeight;
    int Marker;
    float MarkerSize;
    float MarkerWeight;
    float FillAlpha;
    float ErrorBarSize;
    float ErrorBarWeight;
    float DigitalBitHeight;
    float DigitalBitGap;
    float PlotBorderSize;
    float MinorAlpha;
    ImVec2 MajorTickLen;
    ImVec2 MinorTickLen;
    ImVec2 MajorTickSize;
    ImVec2 MinorTickSize;
    ImVec2 MajorGridSize;
    ImVec2 MinorGridSize;
    ImVec2 PlotPadding;
    ImVec2 LabelPadding;
    ImVec2 LegendPadding;
    ImVec2 LegendInnerPadding;
    ImVec2 LegendSpacing;
    ImVec2 MousePosPadding;
    ImVec2 AnnotationPadding;
    ImVec2 FitPadding;
    ImVec2 PlotDefaultSize;
    ImVec2 PlotMinSize;
    ImVec4 Colors[ImPlotCol_COUNT];
    ImPlotColormap Colormap;
    bool AntiAliasedLines;
    bool UseLocalTime;
    bool UseISO8601;
    bool Use24HourClock;
};
struct ImBufferWriter
{
    char* Buffer;
    int Size;
    int Pos;
};
struct ImPlotInputMap
{
    ImGuiMouseButton PanButton;
    ImGuiKeyModFlags PanMod;
    ImGuiMouseButton FitButton;
    ImGuiMouseButton ContextMenuButton;
    ImGuiMouseButton BoxSelectButton;
    ImGuiKeyModFlags BoxSelectMod;
    ImGuiMouseButton BoxSelectCancelButton;
    ImGuiMouseButton QueryButton;
    ImGuiKeyModFlags QueryMod;
    ImGuiKeyModFlags QueryToggleMod;
    ImGuiKeyModFlags HorizontalMod;
    ImGuiKeyModFlags VerticalMod;
};
struct ImPlotDateTimeFmt
{
    ImPlotDateFmt Date;
    ImPlotTimeFmt Time;
    bool UseISO8601;
    bool Use24HourClock;
};
struct ImPlotTime
{
    time_t S;
    int Us;
};
struct ImPlotColormapData
{
    ImVector_ImU32 Keys;
    ImVector_int KeyCounts;
    ImVector_int KeyOffsets;
    ImVector_ImU32 Tables;
    ImVector_int TableSizes;
    ImVector_int TableOffsets;
    ImGuiTextBuffer Text;
    ImVector_int TextOffsets;
    ImVector_bool Quals;
    ImGuiStorage Map;
    int Count;
};
struct ImPlotPointError
{
    double X, Y, Neg, Pos;
};
struct ImPlotAnnotation
{
    ImVec2 Pos;
    ImVec2 Offset;
    ImU32 ColorBg;
    ImU32 ColorFg;
    int TextOffset;
    bool Clamp;
};
struct ImPlotAnnotationCollection
{
    ImVector_ImPlotAnnotation Annotations;
    ImGuiTextBuffer TextBuffer;
    int Size;
};
struct ImPlotTick
{
    double PlotPos;
    float PixelPos;
    ImVec2 LabelSize;
    int TextOffset;
    bool Major;
    bool ShowLabel;
    int Level;
};
struct ImPlotTickCollection
{
    ImVector_ImPlotTick Ticks;
    ImGuiTextBuffer TextBuffer;
    float TotalWidthMax;
    float TotalWidth;
    float TotalHeight;
    float MaxWidth;
    float MaxHeight;
    int Size;
};
struct ImPlotAxis
{
    ImPlotAxisFlags Flags;
    ImPlotAxisFlags PreviousFlags;
    ImPlotRange Range;
    float Pixels;
    ImPlotOrientation Orientation;
    bool Dragging;
    bool ExtHovered;
    bool AllHovered;
    bool Present;
    bool HasRange;
    double* LinkedMin;
    double* LinkedMax;
    ImPlotTime PickerTimeMin, PickerTimeMax;
    int PickerLevel;
    ImU32 ColorMaj, ColorMin, ColorTxt;
    ImGuiCond RangeCond;
    ImRect HoverRect;
};
struct ImPlotAlignmentData
{
    ImPlotOrientation Orientation;
    float PadA;
    float PadB;
    float PadAMax;
    float PadBMax;
};
struct ImPlotItem
{
    ImGuiID ID;
    ImU32 Color;
    int NameOffset;
    bool Show;
    bool LegendHovered;
    bool SeenThisFrame;
};
struct ImPlotLegendData
{
    ImVector_int Indices;
    ImGuiTextBuffer Labels;
    bool Hovered;
    bool Outside;
    bool CanGoInside;
    bool FlipSideNextFrame;
    ImPlotLocation Location;
    ImPlotOrientation Orientation;
    ImRect Rect;
};
struct ImPlotItemGroup
{
    ImGuiID ID;
    ImPlotLegendData Legend;
    ImPool_ImPlotItem ItemPool;
    int ColormapIdx;
};
struct ImPlotPlot
{
    ImGuiID ID;
    ImPlotFlags Flags;
    ImPlotFlags PreviousFlags;
    ImPlotAxis XAxis;
    ImPlotAxis YAxis[3];
    ImPlotItemGroup Items;
    ImVec2 SelectStart;
    ImRect SelectRect;
    ImVec2 QueryStart;
    ImRect QueryRect;
    bool Initialized;
    bool Selecting;
    bool Selected;
    bool ContextLocked;
    bool Querying;
    bool Queried;
    bool DraggingQuery;
    bool FrameHovered;
    bool FrameHeld;
    bool PlotHovered;
    int CurrentYAxis;
    ImPlotLocation MousePosLocation;
    ImRect FrameRect;
    ImRect CanvasRect;
    ImRect PlotRect;
    ImRect AxesRect;
};
struct ImPlotSubplot
{
    ImGuiID ID;
    ImPlotSubplotFlags Flags;
    ImPlotSubplotFlags PreviousFlags;
    ImPlotItemGroup Items;
    int Rows;
    int Cols;
    int CurrentIdx;
    ImRect FrameRect;
    ImRect GridRect;
    ImVec2 CellSize;
    ImVector_ImPlotAlignmentData RowAlignmentData;
    ImVector_ImPlotAlignmentData ColAlignmentData;
    ImVector_float RowRatios;
    ImVector_float ColRatios;
    ImVector_ImPlotRange RowLinkData;
    ImVector_ImPlotRange ColLinkData;
    float TempSizes[2];
    bool FrameHovered;
};
struct ImPlotNextPlotData
{
    ImGuiCond XRangeCond;
    ImGuiCond YRangeCond[3];
    ImPlotRange XRange;
    ImPlotRange YRange[3];
    bool HasXRange;
    bool HasYRange[3];
    bool ShowDefaultTicksX;
    bool ShowDefaultTicksY[3];
    char FmtX[16];
    char FmtY[3][16];
    bool HasFmtX;
    bool HasFmtY[3];
    bool FitX;
    bool FitY[3];
    double* LinkedXmin;
    double* LinkedXmax;
    double* LinkedYmin[3];
    double* LinkedYmax[3];
};
struct ImPlotNextItemData
{
    ImVec4 Colors[5];
    float LineWeight;
    ImPlotMarker Marker;
    float MarkerSize;
    float MarkerWeight;
    float FillAlpha;
    float ErrorBarSize;
    float ErrorBarWeight;
    float DigitalBitHeight;
    float DigitalBitGap;
    bool RenderLine;
    bool RenderFill;
    bool RenderMarkerLine;
    bool RenderMarkerFill;
    bool HasHidden;
    bool Hidden;
    ImGuiCond HiddenCond;
};
typedef ImPool<ImPlotAlignmentData> ImPool_ImPlotAlignmentData;
typedef ImPool<ImPlotItem> ImPool_ImPlotItem;
typedef ImPool<ImPlotPlot> ImPool_ImPlotPlot;
typedef ImPool<ImPlotSubplot> ImPool_ImPlotSubplot;
typedef ImVector<ImPlotAlignmentData> ImVector_ImPlotAlignmentData;
typedef ImVector<ImPlotAnnotation> ImVector_ImPlotAnnotation;
typedef ImVector<ImPlotColormap> ImVector_ImPlotColormap;
typedef ImVector<ImPlotRange> ImVector_ImPlotRange;
typedef ImVector<ImPlotTick> ImVector_ImPlotTick;
typedef ImVector<ImU32> ImVector_ImU32;
typedef ImVector<bool> ImVector_bool;
typedef ImVector<double> ImVector_double;
typedef ImVector<float> ImVector_float;
typedef ImVector<int> ImVector_int;
CIMGUI_API void ImPlot_PlotStairsG(const char* label_id,ImPlotPoint(*getter)(void* data,int idx),void* data,int count);