src/deps/imgui/ext/implot/c.zig

const imgui = @import("../../c.zig");
pub const __time_t = c_long;
pub const time_t = __time_t;
pub const struct_tm = extern struct {
    tm_sec: c_int,
    tm_min: c_int,
    tm_hour: c_int,
    tm_mday: c_int,
    tm_mon: c_int,
    tm_year: c_int,
    tm_wday: c_int,
    tm_yday: c_int,
    tm_isdst: c_int,
    tm_gmtoff: c_long,
    tm_zone: [*c]const u8,
};
pub const tm = struct_tm;
pub const ImPlotMarker = c_int;
pub const struct_ImPlotNextItemData = extern struct {
    Colors: [5]imgui.ImVec4,
    LineWeight: f32,
    Marker: ImPlotMarker,
    MarkerSize: f32,
    MarkerWeight: f32,
    FillAlpha: f32,
    ErrorBarSize: f32,
    ErrorBarWeight: f32,
    DigitalBitHeight: f32,
    DigitalBitGap: f32,
    RenderLine: bool,
    RenderFill: bool,
    RenderMarkerLine: bool,
    RenderMarkerFill: bool,
    HasHidden: bool,
    Hidden: bool,
    HiddenCond: imgui.ImGuiCond,
};
pub const ImPlotNextItemData = struct_ImPlotNextItemData;
pub const ImPlotSubplotFlags = c_int;
pub const struct_ImVector_int = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]c_int,
};
pub const ImVector_int = struct_ImVector_int;
pub const ImPlotLocation = c_int;
pub const ImPlotOrientation = c_int;
pub const struct_ImPlotLegendData = extern struct {
    Indices: ImVector_int,
    Labels: imgui.ImGuiTextBuffer,
    Hovered: bool,
    Outside: bool,
    CanGoInside: bool,
    FlipSideNextFrame: bool,
    Location: ImPlotLocation,
    Orientation: ImPlotOrientation,
    Rect: imgui.ImRect,
};
pub const ImPlotLegendData = struct_ImPlotLegendData;
pub const struct_ImPlotItem = extern struct {
    ID: imgui.ImGuiID,
    Color: imgui.ImU32,
    NameOffset: c_int,
    Show: bool,
    LegendHovered: bool,
    SeenThisFrame: bool,
};
pub const ImPlotItem = struct_ImPlotItem;
pub const struct_ImVector_ImPlotItem = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotItem,
};
pub const ImVector_ImPlotItem = struct_ImVector_ImPlotItem;
pub const struct_ImPool_ImPlotItem = extern struct {
    Buf: ImVector_ImPlotItem,
    Map: imgui.ImGuiStorage,
    FreeIdx: imgui.ImPoolIdx,
};
pub const ImPool_ImPlotItem = struct_ImPool_ImPlotItem;
pub const struct_ImPlotItemGroup = extern struct {
    ID: imgui.ImGuiID,
    Legend: ImPlotLegendData,
    ItemPool: ImPool_ImPlotItem,
    ColormapIdx: c_int,
};
pub const ImPlotItemGroup = struct_ImPlotItemGroup;
pub const struct_ImPlotAlignmentData = extern struct {
    Orientation: ImPlotOrientation,
    PadA: f32,
    PadB: f32,
    PadAMax: f32,
    PadBMax: f32,
};
pub const ImPlotAlignmentData = struct_ImPlotAlignmentData;
pub const struct_ImVector_ImPlotAlignmentData = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotAlignmentData,
};
pub const ImVector_ImPlotAlignmentData = struct_ImVector_ImPlotAlignmentData;
pub const struct_ImPlotRange = extern struct {
    Min: f64,
    Max: f64,
};
pub const ImPlotRange = struct_ImPlotRange;
pub const struct_ImVector_ImPlotRange = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotRange,
};
pub const ImVector_ImPlotRange = struct_ImVector_ImPlotRange;
pub const struct_ImPlotSubplot = extern struct {
    ID: imgui.ImGuiID,
    Flags: ImPlotSubplotFlags,
    PreviousFlags: ImPlotSubplotFlags,
    Items: ImPlotItemGroup,
    Rows: c_int,
    Cols: c_int,
    CurrentIdx: c_int,
    FrameRect: imgui.ImRect,
    GridRect: imgui.ImRect,
    CellSize: imgui.ImVec2,
    RowAlignmentData: ImVector_ImPlotAlignmentData,
    ColAlignmentData: ImVector_ImPlotAlignmentData,
    RowRatios: imgui.ImVector_float,
    ColRatios: imgui.ImVector_float,
    RowLinkData: ImVector_ImPlotRange,
    ColLinkData: ImVector_ImPlotRange,
    TempSizes: [2]f32,
    FrameHovered: bool,
};
pub const ImPlotSubplot = struct_ImPlotSubplot;
pub const struct_ImPlotTick = extern struct {
    PlotPos: f64,
    PixelPos: f32,
    LabelSize: imgui.ImVec2,
    TextOffset: c_int,
    Major: bool,
    ShowLabel: bool,
    Level: c_int,
};
pub const ImPlotTick = struct_ImPlotTick;
pub const struct_ImVector_ImPlotTick = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotTick,
};
pub const ImVector_ImPlotTick = struct_ImVector_ImPlotTick;
pub const struct_ImPlotTickCollection = extern struct {
    Ticks: ImVector_ImPlotTick,
    TextBuffer: imgui.ImGuiTextBuffer,
    TotalWidthMax: f32,
    TotalWidth: f32,
    TotalHeight: f32,
    MaxWidth: f32,
    MaxHeight: f32,
    Size: c_int,
};
pub const ImPlotTickCollection = struct_ImPlotTickCollection;
pub const struct_ImPlotAnnotation = extern struct {
    Pos: imgui.ImVec2,
    Offset: imgui.ImVec2,
    ColorBg: imgui.ImU32,
    ColorFg: imgui.ImU32,
    TextOffset: c_int,
    Clamp: bool,
};
pub const ImPlotAnnotation = struct_ImPlotAnnotation;
pub const struct_ImVector_ImPlotAnnotation = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotAnnotation,
};
pub const ImVector_ImPlotAnnotation = struct_ImVector_ImPlotAnnotation;
pub const struct_ImPlotAnnotationCollection = extern struct {
    Annotations: ImVector_ImPlotAnnotation,
    TextBuffer: imgui.ImGuiTextBuffer,
    Size: c_int,
};
pub const ImPlotAnnotationCollection = struct_ImPlotAnnotationCollection;
pub const struct_ImPlotPointError = extern struct {
    X: f64,
    Y: f64,
    Neg: f64,
    Pos: f64,
};
pub const ImPlotPointError = struct_ImPlotPointError;
pub const struct_ImVector_bool = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]bool,
};
pub const ImVector_bool = struct_ImVector_bool;
pub const struct_ImPlotColormapData = extern struct {
    Keys: imgui.ImVector_ImU32,
    KeyCounts: ImVector_int,
    KeyOffsets: ImVector_int,
    Tables: imgui.ImVector_ImU32,
    TableSizes: ImVector_int,
    TableOffsets: ImVector_int,
    Text: imgui.ImGuiTextBuffer,
    TextOffsets: ImVector_int,
    Quals: ImVector_bool,
    Map: imgui.ImGuiStorage,
    Count: c_int,
};
pub const ImPlotColormapData = struct_ImPlotColormapData;
pub const struct_ImPlotTime = extern struct {
    S: time_t,
    Us: c_int,
};
pub const ImPlotTime = struct_ImPlotTime;
pub const ImPlotDateFmt = c_int;
pub const ImPlotTimeFmt = c_int;
pub const struct_ImPlotDateTimeFmt = extern struct {
    Date: ImPlotDateFmt,
    Time: ImPlotTimeFmt,
    UseISO8601: bool,
    Use24HourClock: bool,
};
pub const ImPlotDateTimeFmt = struct_ImPlotDateTimeFmt;
pub const struct_ImPlotInputMap = extern struct {
    PanButton: imgui.ImGuiMouseButton,
    PanMod: imgui.ImGuiKeyModFlags,
    FitButton: imgui.ImGuiMouseButton,
    ContextMenuButton: imgui.ImGuiMouseButton,
    BoxSelectButton: imgui.ImGuiMouseButton,
    BoxSelectMod: imgui.ImGuiKeyModFlags,
    BoxSelectCancelButton: imgui.ImGuiMouseButton,
    QueryButton: imgui.ImGuiMouseButton,
    QueryMod: imgui.ImGuiKeyModFlags,
    QueryToggleMod: imgui.ImGuiKeyModFlags,
    HorizontalMod: imgui.ImGuiKeyModFlags,
    VerticalMod: imgui.ImGuiKeyModFlags,
};
pub const ImPlotInputMap = struct_ImPlotInputMap;
pub const struct_ImBufferWriter = extern struct {
    Buffer: [*c]u8,
    Size: c_int,
    Pos: c_int,
};
pub const ImBufferWriter = struct_ImBufferWriter;
pub const struct_ImPlotNextPlotData = extern struct {
    XRangeCond: imgui.ImGuiCond,
    YRangeCond: [3]imgui.ImGuiCond,
    XRange: ImPlotRange,
    YRange: [3]ImPlotRange,
    HasXRange: bool,
    HasYRange: [3]bool,
    ShowDefaultTicksX: bool,
    ShowDefaultTicksY: [3]bool,
    FmtX: [16]u8,
    FmtY: [3][16]u8,
    HasFmtX: bool,
    HasFmtY: [3]bool,
    FitX: bool,
    FitY: [3]bool,
    LinkedXmin: [*c]f64,
    LinkedXmax: [*c]f64,
    LinkedYmin: [3][*c]f64,
    LinkedYmax: [3][*c]f64,
};
pub const ImPlotNextPlotData = struct_ImPlotNextPlotData;
pub const ImPlotFlags = c_int;
pub const ImPlotAxisFlags = c_int;
pub const struct_ImPlotAxis = extern struct {
    Flags: ImPlotAxisFlags,
    PreviousFlags: ImPlotAxisFlags,
    Range: ImPlotRange,
    Pixels: f32,
    Orientation: ImPlotOrientation,
    Dragging: bool,
    ExtHovered: bool,
    AllHovered: bool,
    Present: bool,
    HasRange: bool,
    LinkedMin: [*c]f64,
    LinkedMax: [*c]f64,
    PickerTimeMin: ImPlotTime,
    PickerTimeMax: ImPlotTime,
    PickerLevel: c_int,
    ColorMaj: imgui.ImU32,
    ColorMin: imgui.ImU32,
    ColorTxt: imgui.ImU32,
    RangeCond: imgui.ImGuiCond,
    HoverRect: imgui.ImRect,
};
pub const ImPlotAxis = struct_ImPlotAxis;
pub const struct_ImPlotPlot = extern struct {
    ID: imgui.ImGuiID,
    Flags: ImPlotFlags,
    PreviousFlags: ImPlotFlags,
    XAxis: ImPlotAxis,
    YAxis: [3]ImPlotAxis,
    Items: ImPlotItemGroup,
    SelectStart: imgui.ImVec2,
    SelectRect: imgui.ImRect,
    QueryStart: imgui.ImVec2,
    QueryRect: imgui.ImRect,
    Initialized: bool,
    Selecting: bool,
    Selected: bool,
    ContextLocked: bool,
    Querying: bool,
    Queried: bool,
    DraggingQuery: bool,
    FrameHovered: bool,
    FrameHeld: bool,
    PlotHovered: bool,
    CurrentYAxis: c_int,
    MousePosLocation: ImPlotLocation,
    FrameRect: imgui.ImRect,
    CanvasRect: imgui.ImRect,
    PlotRect: imgui.ImRect,
    AxesRect: imgui.ImRect,
};
pub const ImPlotPlot = struct_ImPlotPlot;
pub const struct_ImPlotAxisColor = opaque {};
pub const ImPlotAxisColor = struct_ImPlotAxisColor;
pub const ImPlotColormap = c_int;
pub const struct_ImPlotStyle = extern struct {
    LineWeight: f32,
    Marker: c_int,
    MarkerSize: f32,
    MarkerWeight: f32,
    FillAlpha: f32,
    ErrorBarSize: f32,
    ErrorBarWeight: f32,
    DigitalBitHeight: f32,
    DigitalBitGap: f32,
    PlotBorderSize: f32,
    MinorAlpha: f32,
    MajorTickLen: imgui.ImVec2,
    MinorTickLen: imgui.ImVec2,
    MajorTickSize: imgui.ImVec2,
    MinorTickSize: imgui.ImVec2,
    MajorGridSize: imgui.ImVec2,
    MinorGridSize: imgui.ImVec2,
    PlotPadding: imgui.ImVec2,
    LabelPadding: imgui.ImVec2,
    LegendPadding: imgui.ImVec2,
    LegendInnerPadding: imgui.ImVec2,
    LegendSpacing: imgui.ImVec2,
    MousePosPadding: imgui.ImVec2,
    AnnotationPadding: imgui.ImVec2,
    FitPadding: imgui.ImVec2,
    PlotDefaultSize: imgui.ImVec2,
    PlotMinSize: imgui.ImVec2,
    Colors: [24]imgui.ImVec4,
    Colormap: ImPlotColormap,
    AntiAliasedLines: bool,
    UseLocalTime: bool,
    UseISO8601: bool,
    Use24HourClock: bool,
};
pub const ImPlotStyle = struct_ImPlotStyle;
pub const struct_ImPlotLimits = extern struct {
    X: ImPlotRange,
    Y: ImPlotRange,
};
pub const ImPlotLimits = struct_ImPlotLimits;
pub const struct_ImPlotPoint = extern struct {
    x: f64,
    y: f64,
};
pub const ImPlotPoint = struct_ImPlotPoint;
pub const struct_ImVector_ImPlotPlot = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotPlot,
};
pub const ImVector_ImPlotPlot = struct_ImVector_ImPlotPlot;
pub const struct_ImPool_ImPlotPlot = extern struct {
    Buf: ImVector_ImPlotPlot,
    Map: imgui.ImGuiStorage,
    FreeIdx: imgui.ImPoolIdx,
};
pub const ImPool_ImPlotPlot = struct_ImPool_ImPlotPlot;
pub const struct_ImVector_ImPlotSubplot = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotSubplot,
};
pub const ImVector_ImPlotSubplot = struct_ImVector_ImPlotSubplot;
pub const struct_ImPool_ImPlotSubplot = extern struct {
    Buf: ImVector_ImPlotSubplot,
    Map: imgui.ImGuiStorage,
    FreeIdx: imgui.ImPoolIdx,
};
pub const ImPool_ImPlotSubplot = struct_ImPool_ImPlotSubplot;
pub const ImPlotScale = c_int;
pub const struct_ImVector_ImPlotColormap = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]ImPlotColormap,
};
pub const ImVector_ImPlotColormap = struct_ImVector_ImPlotColormap;
pub const struct_ImVector_double = extern struct {
    Size: c_int,
    Capacity: c_int,
    Data: [*c]f64,
};
pub const ImVector_double = struct_ImVector_double;
pub const struct_ImPool_ImPlotAlignmentData = extern struct {
    Buf: ImVector_ImPlotAlignmentData,
    Map: imgui.ImGuiStorage,
    FreeIdx: imgui.ImPoolIdx,
};
pub const ImPool_ImPlotAlignmentData = struct_ImPool_ImPlotAlignmentData;
